# ChangeLog for virtual/perl-Compress-Zlib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Zlib/ChangeLog,v 1.5 2009/05/05 14:22:05 tove Exp $

  05 May 2009; Torsten Veller <tove@gentoo.org>
  perl-Compress-Zlib-2.019.ebuild:
  Add missing keywords (#268615)

*perl-Compress-Zlib-2.019 (04 May 2009)

  04 May 2009; Torsten Veller <tove@gentoo.org>
  +perl-Compress-Zlib-2.019.ebuild:
  Version bump

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -perl-Compress-Zlib-2.008.ebuild:
  Cleanup

*perl-Compress-Zlib-2.015 (01 Nov 2008)
*perl-Compress-Zlib-2.008 (01 Nov 2008)
*perl-Compress-Zlib-2.005 (01 Nov 2008)

  01 Nov 2008; Yuval Yaari <yuval@gentoo.org> +metadata.xml,
  +perl-Compress-Zlib-2.005.ebuild, +perl-Compress-Zlib-2.008.ebuild,
  +perl-Compress-Zlib-2.015.ebuild:
  Adding virtuals for dual-lifed modules that come with perl-5.10
