@@ -1,4 +1,5 @@
 EBUILD perl-Compress-Zlib-2.015.ebuild 583 RMD160 a7334e048ab2a7a5b8fb79262436a9f462f2f611 SHA1 a1f70241eeb99f9417f0cd1505f84067527455bc SHA256 34a375934e71720b6faebe64e00a7d38562946a845bdec4e8ebcf0eef92cb3d4
 EBUILD perl-Compress-Zlib-2.019.ebuild 571 RMD160 8fb4bee6f3d074e30ecc85725f6f0b6f25204732 SHA1 2a457730078b42b8f385a2030e13bb28c12e6144 SHA256 006c3e02dd6543ecc9ddec05ca2fcdeccbec92a7d8b532a31f965b0465b99694
-MISC ChangeLog 931 RMD160 2826719149d7cffcc9622670fc1b71c59de0c2b7 SHA1 35e1d8be877941cab77fcfbda6a2d205c17de1ba SHA256 17ab877ffb56f38e6f6d9ae4558b7a76fb94566069bde55b6fc685fd351b07da
+EBUILD perl-Compress-Zlib-2.020.ebuild 571 RMD160 44d20a0d4300c67969feaaa2dc514a378d3d459d SHA1 dc6740f560ad38c91040677c408a9859ee346595 SHA256 1a9b36e8534740bb0fd17ec8c5de7bb3c100672c93490fa74aaba0f6e1e163cd
+MISC ChangeLog 1072 RMD160 e40bec189c06412d5fa05a5c4f5df23013ba7933 SHA1 f024fb8896657540d0ebcb7ad7e5056437b1a477 SHA256 c2fc9960db568c296c30ea9b5bb8f1cc0c5b3a3f6990511c854d14dbd63428c3
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
