@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Compress-Zlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Zlib/ChangeLog,v 1.5 2009/05/05 14:22:05 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Zlib/ChangeLog,v 1.6 2009/06/03 22:32:58 tove Exp $
+
+*perl-Compress-Zlib-2.020 (03 Jun 2009)
+
+  03 Jun 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Compress-Zlib-2.020.ebuild:
+  Version bump
 
   05 May 2009; Torsten Veller <tove@gentoo.org>
   perl-Compress-Zlib-2.019.ebuild:
